working on notification

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
+apply plugin: 'com.google.gms.google-services'
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 import com.android.build.OutputFile
@@ -152,6 +153,12 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+
+
+    //firebase - added by me
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+
+
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
 
