--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
